Tema2/tests/tema2/20-basic-classes.out
"20-basic-classes.cl", line 2:16, Semantic error: Type Object of initialization expression of attribute x is incompatible with declared type Int
"20-basic-classes.cl", line 4:16, Semantic error: Type A of initialization expression of attribute a is incompatible with declared type Int
"20-basic-classes.cl", line 7:20, Semantic error: Type Int of initialization expression of attribute s2 is incompatible with declared type String
Compilation halted
