Tema2/tests/tema2/20-basic-classes.cl
class A inherits IO {
    a : Int <- self.copy().copy().copy();
};